--- a/public/styles.css
+++ b/public/styles.css
@@ -7,13 +7,15 @@ html {
   font-family: "Montserrat", sans-serif;
 }
 body {
-  background: #eee;
-  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  
+  background-image: url("./cubes.png");
+  
+
   padding: 0 16px;
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #614BC3;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -60,7 +62,7 @@ footer p {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #f5ba13;
+  color: #F55353;
   border: none;
   width: 36px;
   height: 36px;
@@ -91,7 +93,7 @@ form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background: #FF8400;
   color: #fff;
   border: none;
   border-radius: 50%;
